--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "app/page.tsx.backuo", "app/(dashboard)/page.tsx.old"  ],
   "exclude": ["node_modules"]
 }
