--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "lucide-react": "^0.561.0",
     "next": "^16.1.0",
     "next-themes": "^0.4.6",
-    "pwa": "^1.9.7",
+    "pwa": "^1.3.0",
     "react": "19.2.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
