--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-themes": "^0.4.6",
     "pwa": "^1.3.0",
     "react": "19.2.1",
+    "react-big-calendar": "^1.19.4",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
